[fix]タスク一覧ページのルームメンバー一覧にて人数が多くなると表示されなくなるバグを修正

--- a/app/assets/stylesheets/tasks/tasks.scss
+++ b/app/assets/stylesheets/tasks/tasks.scss
@@ -22,11 +22,12 @@
 
 .room-box {
   width: 18rem;
-  height: auto;
+  max-height: 70vh;
   background-color: $base-color3;
-  padding: 1rem 1rem 4rem;
+  padding: 1rem;
   box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
   position: absolute;
+  overflow: auto;
   right: 2rem;
   top: 7rem;
   z-index: 2;
@@ -65,16 +66,20 @@
     }
   }
   &__btn {
-    @extend %default-btn;
-    color: $base-color1;
-    background-color: $thema-color3-light;
-    position: absolute;
-    right: 1rem;
-    left: 1rem;
-    bottom: 1rem;
+    width: 16rem;
+    height: 3rem;
+    line-height: 3rem;
+    text-align: center;
 
-    &:hover {
-      background-color: $thema-color3;
+    & a {
+      @extend %default-btn;
+      color: $base-color1;
+      background-color: $thema-color3-light;
+      padding: 10px 6rem;
+
+      &:hover {
+        background-color: $thema-color3;
+      }
     }
   }
 }
