--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -14,7 +14,7 @@
           <span class="room-box__list__item"><i class="far fa-frown"></i><%= user.weaknesses_genre.name %></span>
         </div>
       <% end %>
-      <%= link_to "Logout", logout_path, method: :delete, class: "room-box__btn" %>
+      <div class="room-box__btn"><%= link_to "Logout", logout_path, method: :delete %></div>
     </div>
     </div>
   <div class="main-top">
