[fix]パスワードが伏字になるように修正

--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -16,7 +16,7 @@
       </div>
       <div class="room-form-wrapper__form-group">
         <div class="room-form-wrapper__form-group__label"><%= f.label :password, 'パスワード' %></div>
-        <div class="room-form-wrapper__form-group__field"><%= f.text_field :password %></div>
+        <div class="room-form-wrapper__form-group__field"><%= f.password_field :password %></div>
       </div>
         <p class="room-form-wrapper__form-group__lead">ルーム名・パスワードは、入室の際に入力していただくものとなります。</p>
         <p class="room-form-wrapper__form-group__lead">
