--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,7 @@
         <li class="nav-block__item"><%= link_to '新規登録', new_user_registration_path %></li>
         <li class="nav-block__item"><%= link_to 'ログイン', new_user_session_path %></li>
       <% end %>
+      <li class="nav-block__item"><%= link_to 'お問い合わせ', inquiry_path %></li>
     </ul>
   </nav>
 </header>
