--- a/app/views/inquiry/confirm.html.erb
+++ b/app/views/inquiry/confirm.html.erb
@@ -1,4 +1,4 @@
-<div class="inquiry_container">
+<div class="inquiry-container">
   <h1>お問い合わせ</h1>
 
   <%= form_for @inquiry, :url => inquiry_path do |f| %>
