--- a/app/views/inquiry/form_top.html.erb
+++ b/app/views/inquiry/form_top.html.erb
@@ -1,19 +1,19 @@
-<div class="inquiry_container">
-  <h1>お問い合わせ</h1>
+<div class="inquiry-container">
+  <h1 class="inquiry-container__title">お問い合わせ</h1>
   <%= render 'devise/shared/error_messages', resource: @inquiry  %>
   <%= form_for @inquiry, :url => inquiry_confirm_path do |f| %>
-    <table>
+    <table class="inquiry-form">
       <tr>
         <th>名前</th>
-        <td><%= f.text_field :name %></td>
+        <td><%= f.text_field :name, class: "inquiry-form__form"%></td>
       </tr>
       <tr>
         <th>メールアドレス</th>
-        <td><%= f.text_field :email %></td>
+        <td><%= f.text_field :email, class: "inquiry-form__form" %></td>
       </tr>
       <tr>
         <th>お問い合わせ内容</th>
-        <td><%= f.text_area :message %></td>
+        <td><%= f.text_area :message, class: "inquiry-form__form--large" %></td>
       </tr>
     </table>
     <%= f.submit "確認" %>
